2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: ExtUtils::MakeMaker 6.46 removed support for
	EXTRA_META in favor of the new META_MERGE and META_ADD.  Adapt.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.200.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* TODO: Remove the entry about hushing about documentation
	generation.  That's done.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.193.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_callback_invoke): Instead of putting a mortal
	copy of the user data on the stack, increment its ref count and
	mortalize it.  This ensure that modifications to $_[-1] in the
	callback actually change the user data.  Patch by Kevin Ryde.

	* MANIFEST
	* GObject.xs
	* t/lazy-loader.t: Make sure the lazy loader can handle being
	invoked on packages which aren't registered with the Glib type
	system.  This can happen when a non-registered package is setup to
	inherit from a registered package, and when then some method is
	invoked on the non-registered package.  This gets rid of the
	spurious "asked to lazy-load Foo, but that package is not
	registered" warnings.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs:
	* GValue.xs: Handle NULL GParamSpecs in newSVGParamSpec by
	returning undef.  Consequently, remove the NULL handling in
	_gperl_sv_from_value_internal.  This partly reverts the commit
	from 2008-08-18 and brings newSVGParamSpec in line with the other
	SV* constructors.

	* GObject.xs
	* t/5.t: Fix the stack handling in Glib::Object::get to be robust
	against stack movement due to reallocation.  This can happen if a
	subclass' GET_PROPERTY triggers a stack resize.  Patch by Kevin
	Ryde.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.192.
